# RUBIS-SelfDriving

./: .gitignore  README.md  source_list.txt  verification.md
CM_ws/: .gitignore  210126_ctrlcmd.bag  CMStart.sh  CMStart.sh.902  CM_ws  Readme.md  downgrade_sh  keyboard_example.py  pubdocs.md  upgrade_sh
CM_ws/Data/Chassis/: AE_EV_SOP_FRT_160627@  AE_EV_SOP_RR_160627@
CM_ws/Data/Config/: CMRosIFParameters  DVA  GUI  OutputQuantities  OutputQuantities_Anim  Plugins  Project  Settings.sce  SimNetParameters
CM_ws/Data/Misc/: ModelCheck
CM_ws/Data/Road/: .tmp_ipg-pc-21_user.1  RUBIS Test Scenario.rd5  RUBIS_TestRoad_jchoi.rd5  RUBIS_Test_Scenario_sh.rd5  RUBIS_sjhwang.rd5  Sangam_AD_TestRoad_v3_ipg_v3.rd5  Sangam_AD_TestRoad_v3_ipg_v5.rd5  Sangam_AD_TestRoad_v3_ipg_v5_re.rd5  Test_PedestrianStop.rd5  Vector Map Generation (Staright_Line).rd5  Vector Map Generation 1.rd5  Vector Map Generation(section8).rd5
CM_ws/Data/Sensor/: LidarRSI_OS1_64  LidarRSI_VLP_16  LidarRSI_VLP_16_2  MaterialLib
CM_ws/Data/TestRun/: .tmp__HP.0  .tmp__peace.0  .tmp__user.0  .tmp_desktop-f6alela_HP.0  .tmp_ipg-pc-21_user.0  .tmp_ipg-pc-21_user.1  .tmp_peace-system-product-name_peace.1  .tmp_preview  CM911_DemoScenario01  CM911_DemoScenario02  CM911_DemoScenario03  CM911_DemoScenario04  DemoScenario01  DemoScenario02  DemoScenario03  DemoScenario04  LiDAR Test  NDT_Mapping_Data  NDT_Mapping_Data_Temp  NDT_Matching_record  RUBIS Test Scenario  RUBIS Test Scenario_no_route  RUBIS_Test Scenario_sjhwang  RUBIS_Test_Scenario_jchoi  RUBIS_Test_Scenario_sh  Sample Test  Sample Test11212  Sample_Test_v1  Sangam_AD_TestTrack_withTraffic  Temp  Test_PedestrianStop_Scenario  Virtual_PG
CM_ws/Data/Tire/: TIRE@  TIRE_PureSlip@
CM_ws/Data/Vehicle/: .tmp__peace.0  .tmp_desktop-f6alela_HP.1  .tmp_peace-system-product-name_peace.0  DEEV_Based_AE_EV_SOP_AVControl_rev  DEEV_Based_AE_EV_SOP_Lidar_AVcontrol_rev  DEEV_Based_AE_EV_SOP_Lidar_rev  DEEV_Based_AE_EV_SOP_rev
CM_ws/Movie/: Camera.cfg  Camera.cfg.autobackup  CollisionDetect4.tclgeo  CollisionDetect_911.tclgeo  VDS-1.cfg  VDS-2.cfg  VDS.cfg
CM_ws/Plugins/: PlugInterfaces
CM_ws/SimOutput/akyeast-System-Product-Name/: config.info
CM_ws/SimOutput/peace-System-Product-Name/: config.info
CM_ws/SimOutput/rubis-com/: config.info
CM_ws/TrafficSigns/KOR/: adv_childrenprotection.trfsign  adv_followdirection3lanes.trfsign  adv_onewaystreet.trfsign  adv_passleft.trfsign  adv_passright.trfsign  adv_pedestriancrossing.trfsign  adv_roundabout.trfsign  adv_straightorright.trfsign  adv_turnaheadleft.trfsign  adv_turnaheadleftnosignal.trfsign  adv_turnaheadleftorright.trfsign  adv_uturn.trfsign  reg_giveway.trfsign  reg_noentry.trfsign  reg_nomotorcycles.trfsign  reg_noovertaking.trfsign  reg_noparking.trfsign  reg_nostopping.trfsign  reg_noturnleft.trfsign  reg_noturnright.trfsign  reg_nouturn.trfsign  reg_slowdown.trfsign  reg_stop.trfsign  war_cyclistscrossing.trfsign  war_roadbump.trfsign  war_warningpedestriancrossing.trfsign
CM_ws/devel/: .catkin
CM_ws/ros/ros1_ws/: .ycm_extra_conf.py  build.sh
CM_ws/src/: .cproject  .depend  .project  .version_linux64  CM_Main.c  CM_Vehicle.c  CarMaker.props  CarMaker.sln  CarMaker.vcxproj  CarMaker.vcxproj.filters  CarMakerInstall.vcxproj  IO.c  LidarRSI_Model.h  LineSens_UDP.h  Makefile  Makefile.902  Makefile.911  Makefile_CMRosIF  TrafficLight_UDP.h  TrafficSignSens_UDP.h  UAQ_parameter.h  User.c  User.c_CMRosIF  VehicleInfo_UDP.h  Vehicle_Control_UDP.c  Vehicle_Control_UDP.h  app_tmp.c  cmenv.m  makefile.defs  makefile.targets  sUDP.h  startup.m
CM_ws/src_cm4sl/: .cproject  .project  .project_20201105_1704  CM_Main.c  CM_Vehicle.c  CarMaker for Simulink.props  CarMaker for Simulink.sln  CarMaker for Simulink.vcxproj  IO.c  IOVec.h  Makefile  User.c  User.h  app_tmp.c  app_tmp_20201105_1704.c  generic.mdl  makefile.defs  makefile.targets  startup.dict
autoware.ai/autoware_files/carmaker/: carmaker_pure_pursuit.yaml  ndt_matching.rviz  ndt_test.rviz  pid_pipeliner.py  testbed.rviz
autoware.ai/autoware_files/rosbag/: 2020-12-22-16-47-19.bag
autoware_files/: TODO
autoware_files/carmaker/: carmaker_pure_pursuit.yaml  test.rviz  testbed.rviz
autoware_files/carmaker/documents/: .~lock.pose_waypoints_example.csv#  GPS_waypoints_example.csv  pose_waypoints_example.csv
autoware_files/carmaker/launch/: cm_control.launch  cm_detection.launch  cm_localization.launch  cm_planning.launch  cm_sensing.launch  test.launch  (+2 more)
autoware_files/lgsvl/: double_lidar_rviz.rviz  lgsvl_rviz.rviz  testbed.rviz  triple_lidar_rviz.rviz
autoware_files/rosbag/: 201222_BoregasPose.bag  210106_ndt_pose.bag  CarMaker_gps_imu_test.bag
rubis_ws/: .ycm_extra_conf.py  frames.gv
rubis_ws/src/: CMakeLists.txt
rubis_ws/src/rubis_cm_pkg/: CMakeLists.txt  package.xml
rubis_ws/src/rubis_cm_pkg/include/: gnss_localizer_cm.h
rubis_ws/src/rubis_cm_pkg/launch/: ekf_localizer.launch  gnss_localizer_cm.launch  gnss_localizer_cm_test.launch  imu.launch  pose_ekf.launch  robot_loaclization.launch  test.launch  waypoint_generator.launch
rubis_ws/src/rubis_cm_pkg/src/: gnss_cm_republisher.cpp  gnss_localizer_cm.cpp  gnss_localizer_cm_node.cpp  gnss_pose_to_ndt_pose.cpp  gps_covariance_calculator.py  imu_cm_republisher.py  transformation_calculator.py  waypoint_generator.cpp  zone_points_calculator.py
(+397 files in other folders)
